@@ -6,6 +6,6 @@ package net.sourceforge.pmd.cpd;
 
 public class FortranLanguage extends AbstractLanguage {
 	public FortranLanguage() {
-		super(new FortranTokenizer(), ".for");
+		super(new FortranTokenizer(), ".for", ".f", ".f66", ".f77", ".f90");
 	}
 }
