@@ -28,6 +28,7 @@ Upgrade to javacc 5.0 (see patch #1109 Patch to build with Javacc 5.0)
 
 Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
 Fixed bug 1084: NPE at UselessStringValueOfRule.java:36
+Fixed bug 1091: file extension for fortran seems to be wrong in cpdgui tools
 Fixed bug 1092: Wrong Attribute "excludemarker" in Ant Task Documentation
 Fixed bug 1099: UseArraysAsList false positives
 Fixed bug 1102: False positive: shift operator parenthesis
